--- a/history.html
+++ b/history.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="css/styles.css">
   <script defer src="js/load-components.js"></script>
+  <script defer src="js/script.js"></script> 
 </head>
 <body>
   <div id="header-placeholder"></div>
