--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li><a href="index.html" class="nav-link active">Inicio</a></li>
                 <li><a href="quienes-somos.html" class="nav-link">Quiénes somos</a></li>
                 <li><a href="catalog.html" class="nav-link">Catálogo</a></li>
-                <li><a href="#" class="nav-link">Ofertas</a></li>
+                <li><a href="catalog.html?filter=offer" class="nav-link">Ofertas</a></li>
                 <li><a href="#" class="nav-link">Canjeá tus puntos</a></li>
             </ul>
         </div>
@@ -67,7 +67,7 @@
                 <div class="slide-content">
                     <h2>¡Bienvenido a Camelia!</h2>
                     <p>Aprovechá las mejores ofertas. Hasta 50% OFF.</p>
-                    <button class="cta-btn">Explorar Ahora</button>
+                    <a href="catalog.html?filter=offer" class="cta-btn">Explorar ahora</a>
                 </div>
             </div>
             
