--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css"/>
     <script defer src="js/load-components.js"></script>
     <script defer src="js/auth.js"></script>
+    <script defer src="js/script.js"></script> 
     </head>
 <body>
     
